--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,12 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ../requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY backend/ backend/
 
+RUN chmod +x backend/entrypoint.sh
+
+ENTRYPOINT ["backend/entrypoint.sh"]
 CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
