--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "13081:8000"
     volumes:
-      - ./backend/data/recipe.db:/app/data/recipe.db
+      - ./backend/data:/app/backend/data
     restart: always
 
   frontend:
